Implement kit cooldowns (#7)
Use seconds precision for kit cooldowns